# taxathon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_LOG.md  CLAUDE.md  DECISIONS.md  DECISION_LOG.md  FEATURES.md  IMPLEMENTATION.md  INTAKE.md  NFR_UX.md  PRD.md  README.md  pyproject.toml  render.yaml  requirements.txt
.kodos/: ctx-0668323f-802b-4631-b8f2-2f047bc6cdc6.json  state.json
.kodos/evidence/F11/: live-url.txt
.kodos/evidence/walkthrough/: closeout.txt
app/: __init__.py  config.py  guardrails.py  llm.py  main.py  observe.py
app/agent/: __init__.py  loop.py  state.py  tools.py
app/pdf/: __init__.py  field_map.py  fill.py
app/tax/: __init__.py  compute.py  constants_2025.py
app/w2/: __init__.py  build_fixture.py  extract.py
research/: agent-harness-patterns.md  irs-1040-pdf-fill.md  w2-extraction.md
scripts/: gen_mock_w2s.py  smoke_agent.py  smoke_e2e.py  smoke_filing_status.py  smoke_tools.py  smoke_trace.py
static/: app.js  index.html  style.css
tests/: test_agent.py  test_config.py  test_filing_status.py  test_guardrails.py  test_observe.py  test_pdf.py  test_smoke.py  test_tax.py  test_ui.py  test_w2.py
work/agents/verifier-45ci/: events.jsonl  run.json
work/agents/verifier-45ci/prebuild-adversarial/: README.md  env.sh  meta.json  output.md  pane  prompt.md  transcript.txt
work/agents/verifier-g65g/: events.jsonl  run.json
work/agents/verifier-g65g/prebuild-feasibility/: pane  (+5 more)
work/agents/verifier-i896/: events.jsonl  run.json
work/agents/verifier-ig3i/: events.jsonl  run.json
work/agents/verifier-ztr7/: events.jsonl  run.json
(+18 files in other folders)
