[project]
name = "taxathon"
version = "0.1.0"
description = "Agentic tax-filing assistant — chat your single W-2 into a completed 2025 Form 1040."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pypdf>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
